--- a/desafio-common/pom.xml
+++ b/desafio-common/pom.xml
@@ -15,5 +15,10 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.3.5</version>
+		</dependency>
 	</dependencies>
 </project>
