--- a/desafio-api/src/main/resources/application.yml
+++ b/desafio-api/src/main/resources/application.yml
@@ -1,2 +1,14 @@
 server:
   port: 8443
+
+spring:
+  datasource:
+  url: jdbc:h2:mem:tinnovaDB
+  driverClassName: org.h2.Driver
+  username: sa
+  password: password
+h2:
+  console: 
+    enabled: true 
+jpa:
+  database-platform: org.hibernate.dialect.H2Dialect
