--- a/desafio-common/pom.xml
+++ b/desafio-common/pom.xml
@@ -7,6 +7,10 @@
   </parent>
   <artifactId>desafio-common</artifactId>
 	<dependencies>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+		</dependency>
 		 <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
